--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dwebgl",
-  "author": "Pierre Emanuel Manteau, Martin Shwalbe",
+  "author": "Pierre Emanuel Manteau",
   "description": "This is an dojo extension project to offer a dojo layer over renderers like threejs, CubicVR, etc",
   "repository": {
     "type":"git",
